erDiagram

    %% ─── IDENTITÉ & ACCÈS ──────────────────────────────────────────────────

    TENANT {
        uuid    id PK
        string  nom
        string  type "hopital | clinique | cpts | reseau"
        string  finess
        string  schema_pg
        bool    hds_certifie
        date    date_certification
        string  statut "actif | suspendu"
        ts      created_at
    }

    PROFESSIONAL {
        uuid    id PK
        uuid    tenant_id FK
        string  rpps_number UK
        string  prenom
        string  nom
        string  email UK
        string  role "medecin | infirmier | pharmacien | coordinateur | admin"
        string  specialite
        bool    mfa_enabled
        ts      last_login
        ts      created_at
    }

    PATIENT {
        uuid    id PK
        uuid    tenant_id FK
        string  ins_nir UK
        string  prenom
        string  nom
        date    date_naissance
        string  genre "M | F | I"
        string  email
        string  telephone
        string  adresse
        string  code_postal
        string  ville
        string  medecin_referent_id FK
        bool    consentement_numerique
        ts      consentement_date
        ts      created_at
    }

    PATIENT_CONDITION {
        uuid    id PK
        uuid    patient_id FK
        string  code_cim10
        string  libelle
        string  severite "legere | moderee | severe"
        date    date_debut
        date    date_fin
        bool    actif
        uuid    diagnostique_par FK
        ts      created_at
    }

    %% ─── PLANS DE SOINS ────────────────────────────────────────────────────

    CARE_PLAN {
        uuid    id PK
        uuid    patient_id FK
        uuid    created_by FK
        string  titre
        string  statut "actif | suspendu | termine | archive"
        string  pathologie_cible
        date    date_debut
        date    date_fin_prevue
        text    objectifs
        ts      updated_at
        ts      created_at
    }

    CARE_PLAN_TASK {
        uuid    id PK
        uuid    care_plan_id FK
        uuid    assignee_id FK
        string  type "consultation | bilan | medicament | education | acte"
        string  titre
        text    description
        string  statut "a_faire | en_cours | fait | annule"
        ts      echeance
        ts      realise_le
        string  frequence "unique | quotidien | hebdo | mensuel"
        ts      created_at
    }

    PROTOCOL_TEMPLATE {
        uuid    id PK
        string  nom
        string  pathologie
        string  source "HAS | SFAR | SFC | ESMO"
        string  version
        text    description
        bool    actif
        ts      created_at
    }

    %% ─── OBSERVATIONS CLINIQUES (FHIR) ─────────────────────────────────────

    OBSERVATION {
        uuid    id PK
        uuid    patient_id FK
        uuid    recorded_by FK
        string  code_loinc
        string  libelle
        decimal valeur
        string  unite
        string  interpretation "normal | bas | haut | critique"
        string  source "manuel | iot | labo | import_fhir"
        uuid    device_id FK
        ts      date_observation
        ts      created_at
    }

    IOT_DEVICE {
        uuid    id PK
        uuid    patient_id FK
        string  type "glucometre | tensiometre | oxymetre | balance | ecg | patch"
        string  marque
        string  modele
        string  serial_number UK
        string  protocole "ble | wifi | mqtt | lpwan"
        bool    actif
        ts      last_sync
        ts      created_at
    }

    %% ─── MÉDICAMENTS & PRESCRIPTIONS ───────────────────────────────────────

    MEDICATION {
        uuid    id PK
        string  cis_code UK
        string  denomination
        string  forme_pharmaceutique
        string  voie_administration
        string  classe_atc
        text    principes_actifs
        bool    liste_I
        bool    liste_II
        bool    stupefiant
        ts      updated_at
    }

    PRESCRIPTION {
        uuid    id PK
        uuid    patient_id FK
        uuid    medecin_id FK
        string  statut "brouillon | signee | transmise | dispensee | annulee"
        string  type "ordinaire | longue_duree | bizone"
        text    signature_eidas
        ts      date_prescription
        ts      date_validite
        ts      created_at
    }

    PRESCRIPTION_LINE {
        uuid    id PK
        uuid    prescription_id FK
        uuid    medication_id FK
        string  posologie
        int     duree_jours
        int     quantite
        bool    non_substituable
        text    instructions
        ts      created_at
    }

    DRUG_INTERACTION {
        uuid    id PK
        uuid    medication_a_id FK
        uuid    medication_b_id FK
        string  niveau "contre_indication | deconseille | precaution | information"
        text    description
        string  source "theriaque | vidal"
        ts      updated_at
    }

    %% ─── ALERTES ────────────────────────────────────────────────────────────

    ALERT {
        uuid    id PK
        uuid    patient_id FK
        uuid    triggered_by_obs FK
        string  type "biologique | medicament | observance | iot | predictif"
        string  severite "info | urgente | critique"
        text    message
        text    recommandation
        bool    acquittee
        uuid    acquittee_par FK
        ts      acquittee_le
        ts      created_at
    }

    ALERT_RULE {
        uuid    id PK
        uuid    tenant_id FK
        string  nom
        string  code_loinc
        decimal seuil_bas
        decimal seuil_haut
        string  unite
        string  severite
        bool    actif
        ts      created_at
    }

    %% ─── MESSAGERIE SÉCURISÉE ───────────────────────────────────────────────

    SECURE_MESSAGE {
        uuid    id PK
        uuid    sender_id FK
        uuid    patient_id FK
        string  sujet
        text    contenu_chiffre
        bool    urgent
        ts      lu_le
        ts      created_at
    }

    MESSAGE_RECIPIENT {
        uuid    id PK
        uuid    message_id FK
        uuid    recipient_id FK
        bool    lu
        ts      lu_le
    }

    MESSAGE_ATTACHMENT {
        uuid    id PK
        uuid    message_id FK
        string  nom_fichier
        string  type_mime
        string  vault_path
        int     taille_octets
        ts      created_at
    }

    %% ─── ANALYTICS & INDICATEURS ────────────────────────────────────────────

    QUALITY_INDICATOR {
        uuid    id PK
        uuid    tenant_id FK
        string  code_ipaqss
        string  libelle
        string  pathologie
        decimal valeur
        decimal cible
        string  periode "mensuel | trimestriel | annuel"
        date    date_calcul
        ts      created_at
    }

    %% ─── AUDIT & TRAÇABILITÉ ─────────────────────────────────────────────────

    AUDIT_LOG {
        uuid    id PK
        uuid    user_id FK
        uuid    tenant_id FK
        string  action "read | create | update | delete | login | export"
        string  resource_type
        uuid    resource_id
        string  ip_address
        string  user_agent
        jsonb   metadata
        ts      created_at
    }

    %% ─── RELATIONS ──────────────────────────────────────────────────────────

    TENANT            ||--o{ PROFESSIONAL       : "emploie"
    TENANT            ||--o{ PATIENT            : "gere"
    TENANT            ||--o{ ALERT_RULE         : "configure"
    TENANT            ||--o{ QUALITY_INDICATOR  : "mesure"

    PATIENT           ||--o{ PATIENT_CONDITION  : "souffre de"
    PATIENT           ||--o{ CARE_PLAN          : "beneficie de"
    PATIENT           ||--o{ OBSERVATION        : "genere"
    PATIENT           ||--o{ PRESCRIPTION       : "recoit"
    PATIENT           ||--o{ ALERT              : "declenche"
    PATIENT           ||--o{ IOT_DEVICE         : "utilise"
    PATIENT           ||--o{ SECURE_MESSAGE     : "concerne"
    PATIENT           }o--|| PROFESSIONAL       : "suivi par (referent)"

    PROFESSIONAL      ||--o{ CARE_PLAN          : "cree"
    PROFESSIONAL      ||--o{ CARE_PLAN_TASK     : "est assignee"
    PROFESSIONAL      ||--o{ OBSERVATION        : "saisit"
    PROFESSIONAL      ||--o{ PRESCRIPTION       : "redige"
    PROFESSIONAL      ||--o{ ALERT              : "acquitte"
    PROFESSIONAL      ||--o{ SECURE_MESSAGE     : "envoie"
    PROFESSIONAL      ||--o{ PATIENT_CONDITION  : "diagnostique"

    CARE_PLAN         ||--o{ CARE_PLAN_TASK     : "contient"
    PROTOCOL_TEMPLATE ||--o{ CARE_PLAN          : "inspire"

    CARE_PLAN_TASK    }o--|| PROFESSIONAL       : "assignee a"

    OBSERVATION       }o--o| IOT_DEVICE         : "produite par"
    ALERT             }o--o| OBSERVATION        : "declenchee par"

    PRESCRIPTION      ||--o{ PRESCRIPTION_LINE  : "contient"
    PRESCRIPTION_LINE }o--|| MEDICATION         : "prescrit"

    MEDICATION        }o--o{ DRUG_INTERACTION   : "interagit avec (A)"
    MEDICATION        }o--o{ DRUG_INTERACTION   : "interagit avec (B)"

    SECURE_MESSAGE    ||--o{ MESSAGE_RECIPIENT  : "adresse a"
    SECURE_MESSAGE    ||--o{ MESSAGE_ATTACHMENT : "contient"
    MESSAGE_RECIPIENT }o--|| PROFESSIONAL       : "destinataire"

    ALERT_RULE        ||--o{ ALERT             : "genere"

    PROFESSIONAL      ||--o{ AUDIT_LOG         : "tracee par"
    TENANT            ||--o{ AUDIT_LOG         : "appartient a"
